chore: update keywords

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "eighties",
     "red",
     "theme",
-    "vscode"
+    "italics"
   ],
   "license": "SEE LICENSE IN LICENSE",
   "publisher": "robertrossmann",
