--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "@strv/commitlint-config": "^1.1.0",
     "@strv/eslint-config-node": "^2.0.0",
     "@strv/remark-config": "^1.0.2",
     "babel-eslint": "^10.0.2",
     "color": "^3.1.2",
+    "commitlint": "^8.2.0",
     "eslint": "^6.1.0",
     "remark-cli": "^7.0.0",
     "source-map-support": "^0.5.13",
