--- a/.github/workflows/vscode.yaml
+++ b/.github/workflows/vscode.yaml
@@ -34,3 +34,26 @@ jobs:
         run: make install
       - name: Compile theme
         run: make themes
+
+  release:
+    runs-on: ubuntu-18.04
+    needs:
+      - lint
+      - build
+
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+
+      - name: Install dependencies
+        run: make install
+      - name: Compile theme
+        run: make themes
+      - name: Publish to Visual Studio Marketplace
+        run: npx semantic-release
+        env:
+          CI: true
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
