--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
     "@semantic-release/changelog": "^3.0.4",
     "@semantic-release/exec": "^3.3.6",
+    "@semantic-release/git": "^7.0.16",
     "@strv/commitlint-config": "^1.1.0",
     "@strv/eslint-config-node": "^2.0.0",
     "@strv/remark-config": "^1.0.2",
