feat: offer non-italic version of the theme 💪
BREAKING CHANGE: The theme has been split into two distinct versions:

- Remedy - Straight Up: A non-italic variant
- Remedy - Tilted: An italic variant that is best used with the Operator Mono font

As a side-effect, the italic variant should now italicise more languages without adding custom overrides into this theme, which means better consistency. 🎨

--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "contributes": {
     "themes": [
       {
-        "label": "Remedy",
+        "label": "Remedy - Straight Up",
         "uiTheme": "vs-dark",
-        "path": "./themes/remedy-color-theme.json"
+        "path": "./themes/remedy-straightup-color-theme.json"
+      },
+      {
+        "label": "Remedy - Tilted",
+        "uiTheme": "vs-dark",
+        "path": "./themes/remedy-tilted-color-theme.json"
       }
     ]
   },
