fix: update Marketplace description

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "remedy",
-  "description": "A dark theme with reddish accents with roots in Base16 - Eighties colour theme",
+  "description": "A dark theme with orange accents with roots in Base16 - Eighties colour theme",
   "version": "3.0.2",
   "author": "Robert Rossmann <rr.rossmann@me.com>",
   "bugs": {
