chore: precompile sources to save CI time

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -30,5 +30,6 @@ jobs:
         if: steps.cache.outputs.cache-hit == 'true'
 
       - run: make install
+      - run: make precompile
       - run: make lint
       - run: make themes
