chore: use VS Code's ${defaultBuildTask} before launching

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "type": "extensionHost",
       "request": "launch",
       "runtimeExecutable": "${execPath}",
-      "preLaunchTask": "make:themes",
+      "preLaunchTask": "${defaultBuildTask}",
       "args": [
         "--extensionDevelopmentPath=${workspaceFolder}"
       ]
