--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "remedy",
-  "description": "A dark theme with orange accents with roots in Base16 - Eighties colour theme",
+  "description": "A dark & bright theme with orange accents with roots in Base16 - Eighties colour theme",
   "version": "4.17.1",
   "author": "Robert Rossmann <rr.rossmann@me.com>",
   "bugs": {
@@ -62,7 +62,7 @@
     "vscode": "^1.37.0"
   },
   "galleryBanner": {
-    "color": "#353432",
+    "color": "#2C2B2A",
     "theme": "dark"
   },
   "homepage": "https://github.com/robertrossmann/vscode-remedy",
