feat: overhaul the dark variant 🎨
BREAKING CHANGE: The dark variant is now more... playful? It's definitely more brown-ish! The orange accents are also more vibrant, pronounced. Enjoy the spring update! ❤️

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "vscode": "^1.54.0"
   },
   "galleryBanner": {
-    "color": "#2C2B2A",
+    "color": "#36302c",
     "theme": "dark"
   },
   "homepage": "https://github.com/robertrossmann/vscode-remedy",
