--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -7,30 +7,22 @@ on:
 
 jobs:
   validate:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 10
     env:
       CI: 'true'
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: 50
+          fetch-depth: 0
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16
-
-      - id: cache
-        name: Cache node_modules
-        uses: actions/cache@v1
-        with:
-          path: node_modules
-          key: node_modules-${{ runner.OS }}-${{ hashFiles('package-lock.json') }}
-      - run: touch node_modules
-        if: steps.cache.outputs.cache-hit == 'true'
+          node-version: 18
+          cache: npm
 
       - run: make install
-      - run: make precompile
+      - run: make compile
       - run: make lint
       - run: make themes
