--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@strv/eslint-config-typescript": "^3.0.0",
     "@strv/remark-config": "^2.0.0",
     "@types/color": "^3.0.2",
+    "@vscode/vsce": "^2.17.0",
     "color": "^4.0.0",
     "commitlint": "^17.0.0",
     "eslint": "^8.21.0",
@@ -49,8 +50,7 @@
     "semantic-release": "^19.0.0",
     "source-map-support": "^0.5.20",
     "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.7.0",
-    "vsce": "^2.10.0"
+    "typescript": "^4.7.0"
   },
   "displayName": "Remedy",
   "engines": {
