--- a/package.json
+++ b/package.json
@@ -39,22 +39,23 @@
     "@semantic-release/git": "^10.0.0",
     "@strv/commitlint-config": "^2.0.0",
     "@strv/eslint-config-node": "^3.0.0",
-    "@strv/eslint-config-typescript": "^3.0.0",
+    "@strv/eslint-config-typescript": "^4.0.0",
     "@strv/remark-config": "^2.0.0",
     "@types/color": "^3.0.2",
-    "@vscode/vsce": "^2.17.0",
+    "@vscode/vsce": "^2.22.0",
     "color": "^4.0.0",
-    "commitlint": "^17.0.0",
+    "commitlint": "^18.0.0",
     "eslint": "^8.21.0",
-    "remark-cli": "^11.0.0",
-    "semantic-release": "^19.0.0",
+    "remark-cli": "^12.0.0",
+    "semantic-release": "^22.0.0",
     "source-map-support": "^0.5.20",
     "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.7.0"
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.0"
   },
   "displayName": "Remedy",
   "engines": {
-    "node": ">=18",
+    "node": ">=20.6",
     "vscode": "^1.54.0"
   },
   "galleryBanner": {
