--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "vscode": "^1.54.0"
   },
   "galleryBanner": {
-    "color": "#36302c",
+    "color": "#2c2b2a",
     "theme": "dark"
   },
   "homepage": "https://github.com/robertrossmann/vscode-remedy",
