--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/exec": "^6.0.0",
     "@semantic-release/git": "^10.0.0",
-    "@strv/eslint-config-node": "^4.0.0",
-    "@strv/eslint-config-typescript": "^5.0.0",
+    "@strv/eslint-config-node": "^5.0.0-alpha.1",
+    "@strv/eslint-config-typescript": "^6.0.0-alpha.2",
     "@strv/remark-config": "^3.0.0",
     "@types/color": "^3.0.2",
     "@vscode/vsce": "^3.1.0",
     "color": "^4.0.0",
     "commitlint": "^19.5.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.19.0",
     "remark-cli": "^12.0.0",
     "semantic-release": "^24.1.0",
     "source-map-support": "^0.5.20",
